--- a/style.css
+++ b/style.css
@@ -459,11 +459,12 @@ header{
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100vh;
+    height: 95vh;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+
 }
 .text-content{
     display: flex;
@@ -1652,10 +1653,16 @@ transition-duration: 1.4s;
         transform: translateY(200px);
         transition-duration: 1s;
     }
+    #hello-friend{
+        font-size: 2.5rem;
+    }
     .project-box{
         padding: 30px;
         height: 250px;
         gap: 20px;
+    }
+    .landing-page-container{
+        height: 85vh;
     }
   }
   @media screen and (max-width:430px) {
