--- a/style.css
+++ b/style.css
@@ -259,6 +259,18 @@ header{
     filter: invert(1);
 
 }
+noscript{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-dark-mode);
+    font-size: 4rem;
+    color: white;
+    z-index:999999;
+}
 .fakenavbar{
     height: 0px;
     width: 0%;
@@ -1303,6 +1315,7 @@ border: none;
 .tonechange{
     color: black;
 }
+
 /* responsive code below*/
 @media screen and (max-width:1920px) {
     html {
