--- a/style.css
+++ b/style.css
@@ -396,7 +396,7 @@ noscript{
     transform-origin: bottom;
     position: relative;
 }
-/* @keyframes headshake {
+@keyframes headshake {
     0%{
         transform: rotate(-8deg);
     }
@@ -413,7 +413,7 @@ noscript{
         transform: rotate(-8deg);
     }
     
-} */
+}
 
 .logo-top img{
     height: 100%;
@@ -607,7 +607,7 @@ noscript{
     animation: gradient 3s ease infinite;
 
 }
-/* @keyframes gradient {
+@keyframes gradient {
     0% {
         background-position: 0 50%;
     }
@@ -618,7 +618,7 @@ noscript{
     100% {
         background-position: 0 50%;
     }
-} */
+}
 #work:hover{
     -webkit-animation: vibrate-1 0.3s linear both;
     animation: vibrate-1 0.3s linear both;
@@ -986,7 +986,7 @@ noscript{
     width: 100%;
     transition-duration: .5s;
 }
-/* @keyframes gradientforlanguage {
+@keyframes gradientforlanguage {
 	0% {
 		background-position: 0% 50%;
 	}
@@ -996,7 +996,7 @@ noscript{
 	100% {
 		background-position: 0% 50%;
 	}
-} */
+}
 .language-name article{
     font-size: 2.5rem;
     font-weight: 700;
