--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body{
     transform-origin: left;
     transition-duration: .5s;
     gap: 30px;
-    padding: 20px;
+    padding: 20px 0px;
    
 }
 #labelforsetting{
@@ -635,6 +635,7 @@ noscript{
 }
 #work div{
     display: flex;
+	margin: 0px 12px 0px 0px;
 }
 .jello:hover{
     background-clip: text;
@@ -768,7 +769,79 @@ noscript{
     color: var(--color-black);
 }
 
-
+.resume-btn {
+    z-index:9998;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    position: fixed;
+    bottom:8px;
+    left:8px;
+    overflow: hidden;
+    transition-duration: .3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    background: linear-gradient(
+    82.3deg,
+    rgba(150, 93, 233, 1) 10.8%,
+    rgba(99, 88, 238, 1) 94.3%
+  );
+  }
+  
+  /* plus sign */
+  .sign {
+    width: 100%;
+    transition-duration: .3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .sign svg {
+    width: 17px;
+  }
+  
+  .sign svg path {
+    fill: white;
+  }
+  /* text */
+  .text {
+    position: absolute;
+    right: 0%;
+    width: 0%;
+    opacity: 0;
+    color: white;
+    font-size: 1.2em;
+    font-weight: 600;
+    transition-duration: .3s;
+  }
+  /* hover effect on button width */
+  .resume-btn:hover {
+    width: 130px;
+    border-radius: 40px;
+    transition-duration: .3s;
+  }
+  
+  .resume-btn:hover .sign {
+    width: 30%;
+    transition-duration: .3s;
+    padding-left: 20px;
+  }
+  /* hover effect button's text */
+  .resume-btn:hover .text {
+    opacity: 1;
+    width: 70%;
+    transition-duration: .3s;
+    padding-right: 10px;
+  }
+  /* button click effect*/
+  .resume-btn:active {
+    transform: translate(2px ,2px);
+  }
 /* landing page code ends here */
 
 /* about section starts from here */
@@ -1672,7 +1745,7 @@ transition-duration: 1.6s;
     }
     .text-content{
         padding-left: 0px;
-        padding: 20px;
+        width:80%;
     }
     #hello-friend{
         height: 100px;
